--- a/resources/views/index.mustache
+++ b/resources/views/index.mustache
@@ -13,7 +13,7 @@
 </head>
 <body>
 <div class="container">
-    <ul class="nav nav-pills">
+    <ul class="nav nav-pills" id="navMeni">
         <li role="presentation"><a href="/index">Home</a></li>
         <li class="dropdown">
             <a href="#" data-toggle="dropdown" class="dropdown-toggle">Rad sa tabelama <b class="caret"></b></a>
@@ -22,17 +22,13 @@
                 <li role="presentation"><a href="/customers">Customers</a></li>
             </ul>
         </li>
-        <!--<li role="presentation"><a href="/weka">Weka</a></li>-->
+
     </ul>
 
-    <div id="rowAudio" class="row">
-        <audio id="myAudio">
-            <source src="audio/love.mp3">
-            Your user agent does not support the HTML5 Audio element.
-        </audio>
-        <button class="btn btn-info" onclick="aud_play()">Play!</button>
-    </div>
 
+
+    <h1 class="big">Savremene softverske arhitekture</h1>
+    <h1 class="big">Funkcionalno programiranje - Clojure</h1>
 
 </div>
 </nav>
